[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chris Hannam", email = "ch@chrishannam.co.uk"},
]
dependencies = [
    "requests>=2.31.0",
    "pkcs7>=0.1.2",
    "pycryptodome>=3.19.0",
    "tapo>=0.1.3",
    "influxdb-client>=1.38.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

